Added recursion to dockill.sh.  Removed python-software-properties and moved tzdata to before posgresql install.

--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -12,13 +12,13 @@ ENV PGVERSION ${pgversion}
 # Add the PostgreSQL PGP key to verify their Debian packages.
 
 RUN apt-get update && apt-get install -y  apt-utils apt-transport-https ca-certificates \
-	wget dirmngr gnupg software-properties-common && \
+	wget dirmngr gnupg software-properties-common  tzdata && \
 	wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add - && \
     add-apt-repository --yes 'deb http://apt.postgresql.org/pub/repos/apt/ bionic-pgdg main' && \
     apt-get update
 
 # Install packages and Postgres
-RUN apt-get install -y python-software-properties postgresql-${pgversion} postgresql-client-${pgversion} postgresql-contrib-${pgversion} libpq-dev
+RUN apt-get install -y postgresql-${pgversion} postgresql-client-${pgversion} postgresql-contrib-${pgversion} libpq-dev
 
 RUN mkdir -p /opt/pg-data; chown -R postgres /opt/pg-data; chmod 700 /opt/pg-data
 
